--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="logo"><img src="./images/image9.png" /></div>
+        <div class="logo"><img src="./Images/image9.png" /></div>
         <input type="checkbox" id="nav-toggle" class="nav-toggle" />
         <label for="nav-toggle" class="nav-toggle-label">
           <span></span>
