--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="image-box">
-          <img src="./images/Rectangle30.png" alt="rectangle" />
+          <img src="./Images/Rectangle30.png" alt="rectangle" />
         </div>
       </div>
     </section>
@@ -186,7 +186,7 @@
           <div class="right">
             <div class="box">
               <div class="image">
-                <img src="./images/image9.png" alt="kit1" />
+                <img src="./Images/image9.png" alt="kit1" />
               </div>
               <div class="text">
                 <h2>SoliTek - The European Manufacturer of Solar Panels</h2>
@@ -200,7 +200,7 @@
             </div>
             <div class="box">
               <div class="image">
-                <img src="./images/image9.png" alt="kit1" />
+                <img src="./Images/image9.png" alt="kit1" />
               </div>
               <div class="text">
                 <h2>Sunsynk - No Power No Problem</h2>
@@ -215,7 +215,7 @@
             </div>
             <div class="box">
               <div class="image">
-                <img src="./images/image9.png" alt="kit1" />
+                <img src="./Images/image9.png" alt="kit1" />
               </div>
               <div class="text">
                 <h2>BYD - Electrifying Transport</h2>
@@ -229,7 +229,7 @@
             </div>
             <div class="box">
               <div class="image">
-                <img src="./images/image9.png" alt="kit1" />
+                <img src="./Images/image9.png" alt="kit1" />
               </div>
               <div class="text">
                 <h2>REC - Solar's Most Trusted</h2>
@@ -360,7 +360,7 @@
         <div class="upper-content">
             
           <div class="left">
-            <img src="./images/image9.png" alt="footer" />
+            <img src="./Images/image9.png" alt="footer" />
             <ul>
               <li>About</li>
               <li>Careers</li>
